<resources>
    <string name="app_name">Erbil Aeroclub</string>
    <string name="erbil_aeroclub">یانه‌ی هه‌ولێری ئاسمانی</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_us">ده‌رباره‌ی ئێمه</string>
    <string name="contact">په‌یوه‌ندی</string>
    <string name="games">یاریه‌کان</string>
    <string name="League">خوله‌کان</string>
    <string name="players">یاریزانان</string>
    <string name="weather">که‌ش و هه‌وا</string>
    <string name="gallery">گه‌له‌ری</string>
    <string name="home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_description">یانەی هەولێری ئاسمانی </string>
    <string name="mail" >info@erbilaeroclub.com</string>
    <string name="call" >0750 332 22 32</string>
    <string name="send">بنێره‌</string>
    <string name="name">ناو</string>
    <string name="blood_type">جۆری خوێن</string>
    <string name="work_type" >جۆری پیشە</string>
    <string name="phone_unmber">ژمارە تەلەفۆن</string>
    <string name="birth_day">لەدایکبوون</string>
    <string name="notification">ئاگاداری</string>
</resources>
