<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="Navigation_view"
    >

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/players"
            android:icon="@drawable/players"
            android:title="@string/players" />
        <item
            android:id="@+id/games"
            android:icon="@drawable/player"
            android:title="@string/games" />
        <item
            android:id="@+id/league"
            android:icon="@drawable/league"
            android:title="@string/League" />
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/player"
            android:title="@string/gallery" />
        <item
            android:id="@+id/weather"
            android:icon="@drawable/player"
            android:title="@string/weather" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/player"
            android:title="@string/about_us" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/player"
            android:title="@string/contact" />

    </group>




</menu>