<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">
    <ImageView
        android:src="@drawable/logo_rbg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:textStyle="bold"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
    >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/name" />
        <TextView
            android:id="@+id/name_tv_cyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp" />
      </LinearLayout>
        <ImageView
            android:id="@+id/im_cyc"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="120dp"
            android:layout_margin="8dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/blood_type_tv_cyc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="7"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/blood_type" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/birth_day_tv_cyc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="7"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/birth_day" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
       >

        <TextView
            android:id="@+id/work_tv_cyc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="7"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/work_type" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
      >

        <TextView
            android:id="@+id/phone_tv_cyc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="7"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/phone_unmber" />
    </LinearLayout>
</LinearLayout>