<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/contact_tv_cf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        style="@style/text"
        android:text="@string/contact"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linear_layout_email_cf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_tv_cf">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="9"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:text="@string/mail"
            tools:ignore="RtlCompat" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:src="@drawable/mail" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_call_cf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_email_cf">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:layout_weight="9"
            android:text="@string/call"
            tools:ignore="RtlCompat" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:src="@drawable/call" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_comment"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_call_cf">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="10"
            android:minLines="3"
             />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:src="@drawable/comment" />
    </LinearLayout>


    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send"
        style="@style/button"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:elevation="40dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>